--- a/app.env
+++ b/app.env
@@ -3,3 +3,7 @@ DB_DRIVER=postgres
 DB_SOURCE=postgresql://root:backendMasterGoSecret@localhost:5432/simple_bank?sslmode=disable
 
 SERVER_ADDRESS=127.0.0.1:9090
+
+TOKEN_SYMMETRIC_KEY=qwertyuiopasdfghjklzxcvbnm123456
+
+ACCESS_TOKEN_DURATION=15m
