chore: Remove unused files and update migration command

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,3 +49,10 @@ jobs:
 
     - name: Test
       run: make test
+
+
+
+# Path: Makefile
+# migrateup:
+#   migrate -path db/migration -database "postgresql://root:backendMasterGoSecret@localhost:5432/simple_bank?sslmode=disable" -verbose up
+
